# FLWC

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/architecture/: B0_SCOPE.md
docs/chief_engineer/: 00_blueprint.md  01_current_mainline_state.md  02_decision_log.md  03_forbidden_surfaces.md  04_node_queue.md  05_prompt_templates.md  06_non_claim_ledger.md  07_github_app_usage_policy.md  08_p620_operational_boundaries.md  09_source_authority_index.md
docs/runbooks/: B0_LOCAL_VALIDATION.md
docs/source_authority/: CE_CCP_FLWC_CHIEF_ENGINEER_CONTEXT_CONTROL_PROTOCOL_V1_2026-07-10.md  FLWC_A1_ARCHITECTURE_BLUEPRINT_V1_2026-07-09.md  FLWC_A2_SOURCE_LICENSE_MANIFEST_CONTRACTS_V1_2026-07-09.md  FLWC_A3_RAW_EVIDENCE_CLAIM_EVENT_SCHEMAS_V1_2026-07-09.md  FLWC_A4_CANDIDATE_EVIDENCE_PACKAGE_CONTRACT_V1_2026-07-09.md  FLWC_A5_VALIDATOR_REFUSAL_MATRIX_V1_2026-07-09.md  SOURCE_AUTHORITY_MANIFEST_B0.json  WS_FLWC_ENGINEERING_CONSTITUTION_STANDALONE_DOCS_ONLY_2026-06-13.md
prompts/codex/: B0_FIXTURE_ONLY_CODEX_PROMPT.md
scripts/: run_fixture_validation.py  start_codex_b0_fixture_only.sh
src/flwc/: __init__.py
src/flwc/compiler/: __init__.py  claim_event_fixtures.py  raw_evidence_fixtures.py  source_license_fixtures.py  validator_suite_fixtures.py
src/flwc/export/: __init__.py
src/flwc/manifests/: __init__.py
src/flwc/schemas/: __init__.py  candidate_package.py  claim_event.py  common.py  (+3 more)
tests/unit/: test_candidate_package_validator.py  test_claim_event_validator.py  test_raw_evidence_validator.py  test_source_license_validator.py  test_validator_suite.py
(+30 files in other folders)
